# space-efficient-bert

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  experiment_1.py  experiment_2.py  main.cpp
data/: data_generator.py
include/: attention_layer.hpp  bert.hpp  cuda_utils.hpp  encoder_layer.hpp  feed_forward_layer.hpp  input_layer.hpp  memory_manager.hpp  normalization_layer.hpp  profiler.hpp  token_reader.hpp  weight_loader.hpp
src/: attention_layer.cpp  bert.cpp  cuda_utils.cpp  encoder_layer.cpp  feed_forward_layer.cpp  input_layer.cpp  memory_manager.cpp  normalization_layer.cpp  profiler.cpp  token_reader.cpp  weight_loader.cpp
